src/app/globals.css
@import "tailwindcss";

:root {
  font-family: "JetBrains Mono";
  --stripe-color: #070918;
  --bg: var(--stripe-color);
  --maincolor: var(--background);
  color:#fff
}

@property --blink-opacity {
  syntax: "<number>";
  inherits: false;
  initial-value: 1;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #070918;
    --foreground: #faf8f8;
  }
}

body {
  display: flex;
  place-content: center;
  place-items: flex-start center;
  background: var(--background);
}

